# AI-BookKeeping-Plaid

./: .gitignore  COMMIT_LIST.md  Design.md  README.md  implementation_plan.md  migrate_data.py  start_app.ps1  todo_notifications.md
zalazar-bookkeeping/: .dockerignore  .env.example  .gitignore  .hfignore  Dockerfile  README.md  RUNBOOK.md  check_db.py  check_schema.py  db.sql  docker-compose.yml  extract_real_schema.py  get_audit_cols.py  get_constraints.py  implementation_log.md  notification_gaps.md  notification_gaps_code.md  notification_system.md  pyproject.toml  qa_report_20260423.md  qa_report_20260424.md  qa_report_v1.md  requirements.txt  test_complete_flow.py  test_dns.py  test_parse.py  testsms.py  track_sum.py  upload_pdfs.py  verify_db.py
zalazar-bookkeeping/frontend/: index.html  package-lock.json  package.json
zalazar-bookkeeping/migrations/: v3_0_initial.sql  v3_1_notifications.sql  v3_2_job_runs.sql  v3_3_llm_monitoring.sql  v3_3_plaid_metadata.sql  v3_4_notification_types.sql
zalazar-bookkeeping/scripts/: add_rule.py  apply_cascades.py  apply_manual_upload_changes.py  apply_migration.py  approve_tx.py  backfill_plaid.py  check_accounts.py  check_accounts_detailed.py  check_balances.py  check_bank_accounts.py  check_bank_accounts_nulls.py  check_cols.py  check_constraint.py  check_counts.py  check_cursors.py  check_delete_rules.py  check_email_db.py  check_entities.py  check_enum.py  check_everything.py  check_excluded.py  check_gemini_limits.py  check_notification_logs.py  check_pending_reasons.py  check_plaid_entities.py  check_recon_logs.py  (+60 more)
(+88 files in other folders)
