[tool.poetry]
name = "zalazar-bookkeeping"
version = "0.1.0"
description = "AI-powered bookkeeping system"
authors = ["Juan Zalazar"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.*"
uvicorn = {extras = ["standard"], version = "0.32.*"}
pydantic = "2.10.*"
pydantic-settings = "2.6.*"
sqlalchemy = {extras = ["asyncio"], version = "2.0.*"}
asyncpg = "0.30.*"
supabase = "2.10.*"
apscheduler = "3.10.*"
plaid-python = "27.*"
openai = "1.54.*"
anthropic = "0.40.*"
google-generativeai = "^0.8.3"
ringcentral = "0.5.0"
google-api-python-client = "2.150.*"
google-auth-oauthlib = "1.2.*"
structlog = "24.4.*"
sentry-sdk = {extras = ["fastapi"], version = "2.18.*"}
httpx = "0.27.*"
jinja2 = "3.1.*"
cryptography = "43.*"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.*"
pytest-asyncio = "0.24.*"
responses = "0.25.*"
vcrpy = "6.*"
